--- a/CSS_Assesment/reset.css
+++ b/CSS_Assesment/reset.css
@@ -1,3 +1,8 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -40,33 +45,4 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
-body {
-  margin: 0;
-  line-height: 1.5;
-  text-transform: uppercase;
-  background-color: #79b9c6;
-  color: white;
-  font-family: arial, helvetica, sans-serif;
-  font-weight: bold;
-} 
-#fdm {
-}
-#black-text {
-  color:black;
-  font-weight: normal;
-  font-size: 11px;
-}
-#bold-text {
-  font-size: 60px;
-}
-#box {
-  font-size: 11px;
-  font-weight: normal;
-  border: 1px solid white;
-  width: 120px
-}
-div {
-  text-align: center;
-  margin: 120px;
 }
