--- a/HTML_BasicCSS_Assessment/style.css
+++ b/HTML_BasicCSS_Assessment/style.css
@@ -2,5 +2,29 @@ body {
   margin: 0;
   line-height: 1.5;
   text-transform: uppercase;
+  background-color: #79b9c6;
+  color: white;
+  font-family: arial, helvetica, sans-serif;
+  font-weight: bold;
+} 
+#fdm {
 }
-
+#black-text {
+  color:black;
+  font-weight: normal;
+  font-size: 11px;
+}
+#bold-text {
+  font-size: 60px;
+}
+#box {
+  font-size: 11px;
+  font-weight: normal;
+  border: 1px solid white;
+  width: 120px;
+  margin-left: 43%
+}
+div {
+  text-align: center;
+  margin: 250px;
+}
